--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   toastification: ^3.0.1
   lottie: ^3.3.1
   google_fonts: ^6.2.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
